src/cinnamon-app.c
@@ -16,6 +16,7 @@
 #include "cinnamon-window-tracker-private.h"
 #include "st.h"
 #include "gtkactionmuxer.h"
+#include "org-gtk-application.h"
 
 #ifdef HAVE_SYSTEMD
 #include <systemd/sd-journal.h>
@@ -47,14 +48,16 @@ typedef struct {
   /* Whether or not we need to resort the windows; this is done on demand */
   guint window_sort_stale : 1;
 
-  /* DBus property notification subscription */
-  guint properties_changed_id : 1;
-
   /* See GApplication documentation */
   GDBusMenuModel   *remote_menu;
   GtkActionMuxer    *muxer;
   char             * unique_bus_name;
   GDBusConnection  *session;
+
+  /* GDBus Proxy for getting application busy state */
+  CinnamonOrgGtkApplication *application_proxy;
+  GCancellable              *cancellable;
+
 } CinnamonAppRunningState;
 
 /**
@@ -1166,37 +1169,49 @@ cinnamon_app_on_ws_switch (MetaScreen         *screen,
 }
 
 static void
-application_properties_changed (GDBusConnection *connection,
-                                const gchar     *sender_name,
-                                const gchar     *object_path,
-                                const gchar     *interface_name,
-                                const gchar     *signal_name,
-                                GVariant        *parameters,
-                                gpointer         user_data)
+busy_changed_cb (GObject    *object,
+                 GParamSpec *pspec,
+                 gpointer    user_data)
 {
+  CinnamonOrgGtkApplication *proxy;
   CinnamonApp *app = user_data;
-  GVariant *changed_properties;
-  gboolean busy = FALSE;
-  const gchar *interface_name_for_signal;
 
-  g_variant_get (parameters,
-                 "(&s@a{sv}as)",
-                 &interface_name_for_signal,
-                 &changed_properties,
-                 NULL);
+  g_assert (CINNAMON_IS_ORG_GTK_APPLICATION (object));
+  g_assert (CINNAMON_IS_APP (app));
 
-  if (g_strcmp0 (interface_name_for_signal, "org.gtk.Application") != 0)
-    return;
-
-  g_variant_lookup (changed_properties, "Busy", "b", &busy);
-
-  if (busy)
+  proxy = CINNAMON_ORG_GTK_APPLICATION (object);
+  if (cinnamon_org_gtk_application_get_busy (proxy))
     cinnamon_app_state_transition (app, CINNAMON_APP_STATE_BUSY);
   else
     cinnamon_app_state_transition (app, CINNAMON_APP_STATE_RUNNING);
+}
 
-  if (changed_properties != NULL)
-    g_variant_unref (changed_properties);
+static void
+get_application_proxy (GObject      *source,
+                       GAsyncResult *result,
+                       gpointer      user_data)
+{
+  CinnamonApp *app = user_data;
+  CinnamonOrgGtkApplication *proxy;
+
+  g_assert (CINNAMON_IS_APP (app));
+
+  proxy = cinnamon_org_gtk_application_proxy_new_finish (result, NULL);
+  if (proxy != NULL)
+    {
+      app->running_state->application_proxy = proxy;
+      g_signal_connect (proxy,
+                        "notify::busy",
+                        G_CALLBACK (busy_changed_cb),
+                        app);
+      if (cinnamon_org_gtk_application_get_busy (proxy))
+        cinnamon_app_state_transition (app, CINNAMON_APP_STATE_BUSY);
+    }
+
+  if (app->running_state != NULL)
+    g_clear_object (&app->running_state->cancellable);
+
+  g_object_unref (app);
 }
 
 static void
@@ -1206,7 +1221,8 @@ cinnamon_app_ensure_busy_watch (CinnamonApp *app)
   MetaWindow *window;
   const gchar *object_path;
 
-  if (running_state->properties_changed_id != 0)
+    if (running_state->application_proxy != NULL ||
+      running_state->cancellable != NULL)
     return;
 
   if (running_state->unique_bus_name == NULL)
@@ -1218,15 +1234,16 @@ cinnamon_app_ensure_busy_watch (CinnamonApp *app)
   if (object_path == NULL)
     return;
 
-  running_state->properties_changed_id =
-    g_dbus_connection_signal_subscribe (running_state->session,
-                                        running_state->unique_bus_name,
-                                        "org.freedesktop.DBus.Properties",
-                                        "PropertiesChanged",
-                                        object_path,
-                                        "org.gtk.Application",
-                                        G_DBUS_SIGNAL_FLAGS_NONE,
-                                        application_properties_changed, app, NULL);
+  running_state->cancellable = g_cancellable_new();
+  /* Take a reference to app to make sure it isn't finalized before
+     get_application_proxy runs */
+  cinnamon_org_gtk_application_proxy_new (running_state->session,
+                                          G_DBUS_PROXY_FLAGS_DO_NOT_AUTO_START,
+                                          running_state->unique_bus_name,
+                                          object_path,
+                                          running_state->cancellable,
+                                          get_application_proxy,
+                                          g_object_ref (app));
 }
 
 void
@@ -1574,8 +1591,13 @@ unref_running_state (CinnamonAppRunningState *state)
   screen = cinnamon_global_get_screen (cinnamon_global_get ());
   g_signal_handler_disconnect (screen, state->workspace_switch_id);
 
-  if (state->properties_changed_id != 0)
-    g_dbus_connection_signal_unsubscribe (state->session, state->properties_changed_id);
+  g_clear_object (&state->application_proxy);
+
+  if (state->cancellable != NULL)
+    {
+      g_cancellable_cancel (state->cancellable);
+      g_clear_object (&state->cancellable);
+    }
 
   g_clear_object (&state->remote_menu);
   g_clear_object (&state->muxer);
